--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=archMVC
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
